# crop-disease-detector-api

./: README.md  main.py  pyproject.toml  pyrightconfig.json  supported-crops.json  test_main.py
